gcc/testsuite/rust/rustc/ui/derives/deriving-primitive.rs
#[derive(FromPrimitive)] // { dg-error "" "" { target *-*-* } }
// { dg-error "" "" { target *-*-* } .-2 }
enum Foo {}

fn main() {}

